# computer_vision

./: Lab2.cpp  Lab3.cpp  Lab4.cpp  Lab5.cpp  colorChangerLab1.cpp  main_lab_6.cpp
Lab6/: .gitignore  CMakeLists.txt
Lab6/include/: ObjTracker.hpp  lab6.hpp
Lab6/src/: ObjTracker.cpp  lab6.cpp  lab6_main.cpp
